K8/appUporabnik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appuporabnik
  name: appuporabnik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appuporabnik
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: appuporabnik
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:Uporabnik2022-12-05-03-43-28
          name: appuporabnik
          ports:
            - containerPort: 5002
          resources: {}
      restartPolicy: Always
status: {}
