K8/Katalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appkatalog
  name: appkatalog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appkatalog
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: appkatalog
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:Katalog1
          name: appkatalog
          ports:
            - containerPort: 5003
              name: server
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: appkatalog
spec:
  type: ClusterIP
  ports:
    - port: 5003
      protocol: TCP
      targetPort: server
  selector:
    app: appkatalog
