K8/Kosarica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appkosarica
  name: appkosarica
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appkosarica
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: appkosarica
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:Kosarica1
          name: appkosarica
          ports:
            - containerPort: 5006
              name: server
              protocol: TCP            
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: appkosarica
spec:
  type: ClusterIP
  ports:
    - port: 5006
      protocol: TCP
      targetPort: server
  selector:
    app: appkosarica
