K8/Kosarica-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appkosarica
  name: appkosarica
spec:
  type: LoadBalancer
  ports:
    - port: 5006
      protocol: TCP
      targetPort: 5006
  selector:
    io.kompose.service: appkosarica
