K8/PridobivanjePodatkov-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apppridobivanjepodatkov
  name: apppridobivanjepodatkov
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apppridobivanjepodatkov
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: apppridobivanjepodatkov
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:PridobivanjePodatkov1
          name: apppridobivanjepodatkov
          ports:
            - containerPort: 5008
              name: server
              protocol: TCP                
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: apppridobivanjepodatkov
spec:
  type: ClusterIP
  ports:
    - port: 5008
      protocol: TCP
      targetPort: server
  selector:
    app: apppridobivanjepodatkov
