K8/PridobivanjePodatkov-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apppridobivanjepodatkov
  name: apppridobivanjepodatkov
spec:
  type: LoadBalancer
  ports:
    - port: 5008
      protocol: TCP
      targetPort: 5008
  selector:
    io.kompose.service: apppridobivanjepodatkov
