K8/PrimerjavaCen-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appprimerjavacen
  name: appprimerjavacen
spec:
  type: LoadBalancer
  ports:
    - port: 5005
      protocol: TCP
      targetPort: 5005
  selector:
    io.kompose.service: appprimerjavacen
