K8/SpletniVmesnik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appspletnivmesnik
  name: appspletnivmesnik
spec:
  type: LoadBalancer
  ports:
    - port: 5004
      protocol: TCP
      targetPort: 5004
  selector:
    io.kompose.service: appspletnivmesnik
