K8/SpletniVmsenik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appspletnivmesnik
  name: appspletnivmesnik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appspletnivmesnik
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: appspletnivmesnik
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:SpletniVmesnik
          name: appspletnivmesnik
          ports:
            - containerPort: 5004
              name: server
              protocol: TCP                
          resources: {}
      restartPolicy: Always
status: {}


---

apiVersion: v1
kind: Service
metadata:
  name: appspletnivmesnik
spec:
  type: ClusterIP
  ports:
    - port: 5004
      protocol: TCP
      targetPort: server
  selector:
    app: appspletnivmesnik
