K8/Uporabnik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appuporabnik
  name: appuporabnik
spec:
  type: LoadBalancer
  ports:
    - port: 5002
      protocol: TCP
      targetPort: 5002
  selector:
    io.kompose.service: appuporabnik
