K8/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appkatalog
  name: appkatalog
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    io.kompose.service: appkatalog
