K8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katalog
  template:
    metadata:
      labels:
        app: katalog
    spec:
      containers:
        - image: tito1234/primerjalnik_cen:Katalog
          name: katalog
          
          ports:
            - containerPort: 5000
              name: server
              protocol: TCP



---

apiVersion: v1
kind: Service
metadata:
  name: balancer
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      protocol: TCP
      targetPort: server
  selector:
    app: katalog
