K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /SV(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appspletnivmesnik
                port:
                  number: 5004
          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appuporabnik
                port:
                  number: 5002
          - path: /izdelek(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appprimerjavacen
                port:
                  number: 5005
          - path: /pridobivanjaPodatkov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apppridobivanjepodatkov
                port:
                  number: 5008
          - path: /kosarica(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appkosarica
                port:
                  number: 5006
          - path: /katalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appkatalog
                port:
                  number: 5003
